shenyu-examples/shenyu-examples-dubbo/shenyu-examples-apache-dubbo-service/k8s/shenyu-deployment.yml
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: shenyu-admin
  labels:
    app: shenyu-admin
    all: shenyu-examples-dubbo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shenyu-admin
      all: shenyu-examples-dubbo
  template:
    metadata:
      labels:
        app: shenyu-admin
        all: shenyu-examples-dubbo
    spec:
      containers:
        - name: shenyu-admin
          image: apache/shenyu-admin:latest
          resources: {}
          ports:
            - containerPort: 9095
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
status: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shenyu-bootstrap
  labels:
    app: shenyu-bootstrap
    all: shenyu-examples-http
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shenyu-bootstrap
      all: shenyu-examples-http
  template:
    metadata:
      labels:
        app: shenyu-bootstrap
        all: shenyu-examples-http
    spec:
      containers:
        - name: shenyu-bootstrap
          image: apache/shenyu-bootstrap:latest
          resources: {}
          ports:
            - containerPort: 9195
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
status: {}
