shenyu-examples/shenyu-examples-dubbo/shenyu-examples-apache-dubbo-service/k8s/shenyu-examples-dubbo.yml
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: shenyu-examples-dubbo-deployment
  namespace: shenyu-ingress
  labels:
    app: shenyu-examples-dubbo
    all: shenyu-examples-dubbo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shenyu-examples-dubbo
      all: shenyu-examples-dubbo
  strategy: {}
  template:
    metadata:
      labels:
        app: shenyu-examples-dubbo
        all: shenyu-examples-dubbo
    spec:
      containers:
        - image: shenyu-examples-apache-dubbo-service
          name: shenyu-examples-dubbo
          livenessProbe:
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
            exec:
              command:
                - /bin/sh
                - "-c"
                - wget -q -O - http://localhost:8011/actuator/health | grep UP || exit 1
          ports:
            - containerPort: 8011
            - containerPort: 20888
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
status: {}

---
apiVersion: v1
kind: Service
metadata:
  name: shenyu-examples-apache-dubbo-service
  namespace: shenyu-ingress
  labels:
    app: shenyu-examples-dubbo
    all: shenyu-examples-dubbo
spec:
  selector:
    app: shenyu-examples-dubbo
    all: shenyu-examples-dubbo
  type: NodePort
  ports:
    - name: "8011"
      port: 8011
      targetPort: 8011
      nodePort: 31187
status:
  loadBalancer: {}
